<FrameLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/fragment_detail_poster"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/generic_accessability"
        android:scaleType="centerCrop" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="48dp"
        android:background="#daffffff" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/fragment_detail_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/detail_show_banner"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp" >

                <TextView
                    android:id="@+id/fragment_detail_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold" />

                <com.episodecountdown.library.TextViewEx
                    android:id="@+id/fragment_detail_overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="#22000000"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp" >

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_weight="6"
                        android:contentDescription="@string/generic_accessability"
                        android:src="@drawable/trakt_ratting_pic" />

                    <TextView
                        android:id="@+id/fragment_detail_ratting_positive"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="right"
                        android:maxLines="1"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/palette_green" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_weight="3"
                        android:contentDescription="@string/generic_accessability"
                        android:src="@drawable/green_thumb" />

                    <TextView
                        android:id="@+id/fragment_detail_ratting"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center_horizontal"
                        android:maxLines="1"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/palette_blue" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_weight="3"
                        android:contentDescription="@string/generic_accessability"
                        android:src="@drawable/red_thumb" />

                    <TextView
                        android:id="@+id/fragment_detail_ratting_negative"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="left"
                        android:maxLines="1"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/palette_red" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_show_genre"
                            android:textColor="@color/palette_blue"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_show_started"
                            android:textColor="@color/palette_blue"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/fragment_detail_show_ended_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_show_ended"
                            android:textColor="@color/palette_blue"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_show_runtime"
                            android:textColor="@color/palette_blue"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_show_origin_country"
                            android:textColor="@color/palette_blue"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_show_network"
                            android:textColor="@color/palette_blue"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_show_airtime"
                            android:textColor="@color/palette_blue"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_show_airday"
                            android:textColor="@color/palette_blue"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/fragment_detail_show_genre"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1" />

                        <TextView
                            android:id="@+id/fragment_detail_show_started"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/fragment_detail_show_ended"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/fragment_detail_show_runtime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/fragment_detail_show_origin_country"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/fragment_detail_show_network"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/fragment_detail_show_airtime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/fragment_detail_show_airday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>

                <ProgressBar
                    android:id="@+id/detail_show_progress_bar"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/fragment_detail_countdown_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/detail_show_countdown"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/palette_red"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/fragment_detail_countdown_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/fragment_detail_countdown_days"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:maxLines="1"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/palette_red"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:maxLines="1"
                        android:text="@string/days"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/palette_red" />

                    <TextView
                        android:id="@+id/fragment_detail_countdown_hours"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:maxLines="1"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/palette_red"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:maxLines="1"
                        android:text="@string/hours"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/palette_red" />

                    <TextView
                        android:id="@+id/fragment_detail_countdown_minutes"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:maxLines="1"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/palette_red"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:maxLines="1"
                        android:text="@string/minutes"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/palette_red" />

                    <TextView
                        android:id="@+id/fragment_detail_countdown_seconds"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:maxLines="1"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/palette_red"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:maxLines="1"
                        android:text="@string/seconds"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/palette_red" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/fragment_detail_previous_next_episode_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/fragment_detail_next_episode_heading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/palette_blue_translucent"
                        android:text="@string/detail_show_next_episode"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/fragment_detail_show_next_episode_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/fragment_detail_show_next_episode_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/palette_blue_translucent"
                        android:text="@string/detail_show_previous_episode"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/fragment_detail_show_last_episode_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/fragment_detail_show_last_episode_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-6069233949455372/5454705046"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/fragment_detail_watchlist_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/add_to_watchlist_button"
        android:text="@string/add_to_watchlist_button"
        android:textColor="@color/white" />

</FrameLayout>