<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center" 
    android:foreground="?attr/selectableItemBackground"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:orientation="vertical" 
        >

        <ImageView
            android:id="@+id/list_show_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/list_show_poster"
            android:gravity="center_vertical"
            android:scaleType="centerInside" 
            />

        <TextView
            android:id="@+id/list_show_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" 
            android:padding="3dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:background="@color/light_blue"/>

        <TextView
            android:id="@+id/list_show_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:paddingLeft="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_list_first_aired"
                android:textColor="@color/palette_blue"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/list_show_first_aired"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:paddingLeft="10dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_list_country"
                android:textColor="@color/palette_blue"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/list_show_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:paddingLeft="10dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_list_runtime"
                android:textColor="@color/palette_blue"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/list_show_runtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/list_show_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:ellipsize="end"
            android:maxLines="2" >
        </TextView>
    </LinearLayout>

</android.support.v7.widget.CardView>