<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="175dp"
    android:layout_gravity="center"
    android:foreground="?attr/selectableItemBackground" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:orientation="horizontal"
        android:paddingRight="6dp" >

        <com.episodecountdown.library.SquareImageView
            android:id="@+id/watchlist_list_show_poster"
            android:layout_width="120dp"
            android:layout_height="175dp"
            android:layout_marginRight="6dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/generic_accessability"
            android:gravity="center_vertical"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/watchlist_list_show_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/watchlist_item_show_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:ellipsize="end"
                android:maxLines="1" />

            <TextView
                android:id="@+id/watchlist_list_show_airs_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_blue"
                android:ellipsize="end"
                android:gravity="left"
                android:maxLines="2"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search_list_status"
                        android:textColor="@color/palette_blue"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_show_runtime"
                        android:textColor="@color/palette_blue"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_show_origin_country"
                        android:textColor="@color/palette_blue"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/watchlist_item_show_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/watchlist_item_show_runtime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/watchlist_item_show_origin_country"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/watchlist_list_show_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/palette_red" />
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>